<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fuel_card_view_friend"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardUseCompatPadding="true"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/stationName"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:lines="1"
            android:text="@string/station_name"
            android:textAppearance="@android:style/TextAppearance.Holo.Medium"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/streetAddress"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:lines="1"
            android:paddingTop="37dp"
            android:text="@string/street_address"
            android:textAppearance="@android:style/TextAppearance.Holo.Medium"
            android:textSize="19sp"
            android:paddingBottom="5dp"/>

        <Button
            android:id="@+id/directionsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/directions" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>
