<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/fuelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/alternative_fuel"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/findAlternativesLogo" />

    <TextView
        android:id="@+id/thriftText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="132dp"
        android:layout_marginRight="132dp"
        android:text="@string/thrift_stores"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fuelText" />

    <TextView
        android:id="@+id/productText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/eco_friendly_products"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thriftText" />

    <ImageView
        android:id="@+id/shoppingIcon"
        android:layout_width="86dp"
        android:layout_height="104dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        app:layout_constraintEnd_toStartOf="@+id/thriftText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fuelIcon"
        app:srcCompat="@drawable/shoppingicon" />

    <ImageView
        android:id="@+id/fuelIcon"
        android:layout_width="90dp"
        android:layout_height="91dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        app:layout_constraintEnd_toStartOf="@+id/fuelText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/findAlternativesLogo"
        app:srcCompat="@drawable/fuelfinal" />

    <ImageView
        android:id="@+id/eco"
        android:layout_width="97dp"
        android:layout_height="86dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        app:layout_constraintEnd_toStartOf="@+id/productText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shoppingIcon"
        app:srcCompat="@drawable/eco" />

    <ImageView
        android:id="@+id/findAlternativesLogo"
        android:layout_width="412dp"
        android:layout_height="120dp"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/alternative_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>